# axis_vapix

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  text.txt
axis/: __init__.py
axis/vapix/: __init__.py  abc_classes.py  analytics_metadata_configuration.py  analytics_metadata_producer_configuration.py  api.py  api_discovery_service.py  apis.py  application_api.py  axis_methods.py  basic_device_information.py  capture_mode.py  clear_view.py  connection.py  custom_http_header_api.py  defaults.py  devices.py  exeptions.py  find_my_device.py  firmware_management_api.py  handlers.py  interfaces.py  loitering_guard.py  methods.py  network_settings_api.py  network_video.py  ntp_api.py  object_analytics.py  object_analytics_api.py  overlay_api.py  parameter_management.py  params.py  request.py  requests.py  time_api.py  types.py  utils.py
axis/vapix/apis/: __init__.py  abc.py  analytics_metadata_configuration.py  api_discovery_service.py  application_api.py  basic_device_information.py  capture_mode.py  firmware_management.py  firmware_management_api.py  loitering_guard.py  network_settings.py  network_settings_api.py  ntp.py  ntp_api.py  object_analytics.py  (+8 more)
axis_tests/: __init__.py  test_api_time.py
tests/: __init__.py  device_set_time.py  get_device.py  handlers.py  make_device_request.py  method_get_all_properties.py  method_get_network_info.py  method_param.py  method_upgrade_firmware.py  test.py  test_api_time.py  test_versions.py
tests_axis/: device.py  get_basic_device_info.py  get_supported_versions.py  test.py  upgrade_firmware.py
