[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axis_vapix"
version = "0.1.8"
description = "Python-based API handler for interacting with Axis devices using the VAPIX APIs"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Igor da Silva Silvestrin", email = "silvestrinigor@icloud.com"}]
dependencies = ["requests==2.32.3", "packaging==24.2", "aiohttp==3.11.11", "pytz==2024.2"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]